feat: enhance booking details retrieval and security configuration with CORS support